--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,8 @@ target 'Takuzu' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
 end
 
 post_install do |installer|
