--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fix": "cd node_modules/react-native/third-party/glog-*&&../../scripts/ios-configure-glog.sh"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.0",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -24,6 +25,7 @@
     "react-native-device-info": "^0.25.1",
     "react-native-iphone-x-helper": "^1.2.0",
     "react-native-modal": "^7.0.2",
+    "react-native-simple-store": "^2.0.0",
     "react-native-spinkit": "^1.2.0",
     "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^6.0.2",
