--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.0")
@@ -23,7 +28,6 @@ buildscript {
 allprojects {
     repositories {
 				// Add jitpack repository (added by react-native-spinkit)
-				maven { url "https://jitpack.io" }
         mavenLocal()
         google()
         jcenter()
@@ -31,5 +35,11 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
+
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven { url "https://jitpack.io" }
     }
 }
