--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,10 +156,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-device-info')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-splash-screen')
-    implementation project(':react-native-device-info')
+
+    implementation 'com.karumi:dexter:5.0.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
